# sqlitenc

./: pyproject.toml
src/sqlitenc/: __init__.py  crypto.py  fields.py  keys.py  ngrams.py  query.py
