[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlitenc"
version = "0.1.0"
description = "encryption at rest for sqlalchemy"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy>=2.0.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]


